--- a/tuto4.html
+++ b/tuto4.html
@@ -15,7 +15,7 @@
         <div class="wrapper">
           <div class="header-content">
             <div class="logo-container">
-              <a class="logo  logo--color" href="/">
+              <a class="logo  logo--color" href="/index.html">
                 <img alt="logo" src="Moodboard-12(1).png" />
               </a>
             </div>
@@ -44,7 +44,7 @@
         <section>
             <div class="wrapper">
                 <div class="sous-wrapper">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/I1nnIDQSGUk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <iframe width="820" height="461,25" src="https://www.youtube.com/embed/I1nnIDQSGUk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
