--- a/index.html
+++ b/index.html
@@ -34,15 +34,37 @@
       
       </header>
     <main>
-        <section>
-            <div class="wrapper">
-                <h1>title</h1>
-                <p>
-                    content
-                </p>
+        <section class="intro accueil">
+          <div class="wrapper">
+              <h1></h1>
+              <h3>bienvenue</h3>
+              <p>ici vous trouverez tous les tutoriels dont vous aurez besoin</p>
 
-            </div>
-        </section>
+              <h5 class="title">API REST, faire un CRUD avec node.js mongodb docker</h5>
+              <div class="flex-box">
+                <a href="tuto1.html" class="cards">
+                  <h6>Swagger</h6>
+                  <p>15 min</p>
+                </a>
+                <a href="tuto2.html" class="cards">
+                  <h6>Node.js et Express</h6>
+                  <p>25 min</p>
+                </a>
+                <a href="tuto3.html" class="cards">
+                  <h6>MongoDB</h6>
+                  <p>20 min</p>
+                </a>
+                <a href="tuto4.html" class="cards">
+                  <h6>Controller</h6>
+                  <p>35 min</p>
+                </a>
+                <a href="tuto5.html" class="cards">
+                  <h6>Dockeriser</h6>
+                  <p>10 min</p>
+                </a>
+              </div>
+          </div>
+      </section>
     </main>
     <script src="script.js"></script> 
 </body>
