--- a/tuto5.html
+++ b/tuto5.html
@@ -38,7 +38,9 @@
             <div class="wrapper">
                 <h1>Dockeriser notre API</h1>
                 <h2>// Introduction</h2>
-                <p>Dans ce tutoriel, nous allons nous plonger dans l'implémentation des contrôleurs pour chacune de nos routes API. Le contrôleur agit comme un intermédiaire entre la base de données et l'API, ce qui nous permet d'interagir avec la base de données et de traiter les requêtes de l'API de manière ordonnée et organisée. Nous utiliserons Mongoose, une bibliothèque de modélisation d'objets MongoDB populaire, pour interagir avec la base de données et effectuer des opérations CRUD.</p>
+                <p>Dans ce tutoriel, nous allons nous plonger dans le monde de Docker, une plateforme puissante pour créer, expédier et exécuter des applications distribuées. Nous allons commencer voir le processus de création d'un Dockerfile, qui est utilisé pour spécifier les étapes de la construction d'une image Docker pour votre application. Enfin, verons l'utilisation d'un fichier docker-compose, qui est utilisé pour définir et exécuter des applications Docker à conteneurs multiples. À la fin de ce tutoriel, vous aurez une solide compréhension de la façon d'utiliser Docker pour déployer et exécuter vos applications en toute simplicité.
+
+                  Traduit avec www.DeepL.com/Translator (version gratuite)</p>
             </div>
         </section>
         <section>
