--- a/tuto4.html
+++ b/tuto4.html
@@ -15,7 +15,7 @@
         <div class="wrapper">
           <div class="header-content">
             <div class="logo-container">
-              <a class="logo  logo--color" href="/index.html">
+              <a class="logo  logo--color" href="index.html">
                 <img alt="logo" src="Moodboard-12(1).png" />
               </a>
             </div>
