--- a/tuto5.html
+++ b/tuto5.html
@@ -38,7 +38,7 @@
             <div class="wrapper">
                 <h1>Dockeriser notre API</h1>
                 <h2>// Introduction</h2>
-                <p>Dans ce tutoriel, nous allons nous plonger dans le monde de Docker, une plateforme puissante pour créer, expédier et exécuter des applications distribuées. Nous allons commencer voir le processus de création d'un Dockerfile, qui est utilisé pour spécifier les étapes de la construction d'une image Docker pour votre application. Enfin, verons l'utilisation d'un fichier docker-compose, qui est utilisé pour définir et exécuter des applications Docker à conteneurs multiples. À la fin de ce tutoriel, vous aurez une solide compréhension de la façon d'utiliser Docker pour déployer et exécuter vos applications en toute simplicité.
+                <p>Dans ce tutoriel, nous allons nous plonger dans le monde de Docker. Nous allons commencer voir le processus de création d'un Dockerfile, qui est utilisé pour spécifier les étapes de la construction d'une image Docker. Enfin, verons l'utilisation d'un fichier docker-compose, qui est utilisé pour attribuer et construire des images Docker à conteneurs. À la fin de ce tutoriel, vous aurez une solide compréhension de la façon d'utiliser Docker pour déployer vos applications en toute simplicité.
 
                   Traduit avec www.DeepL.com/Translator (version gratuite)</p>
             </div>
