--- a/tuto4.html
+++ b/tuto4.html
@@ -38,7 +38,7 @@
             <div class="wrapper">
                 <h1>Controller node.js</h1>
                 <h2>// Introduction</h2>
-                <p>Dans ce tutoriel, nous allons nous plonger dans l'implémentation d'un docker pour notre API. Le contrôleur agit comme un intermédiaire entre la base de données et l'API, ce qui nous permet d'interagir avec la base de données et de traiter les requêtes de l'API de manière ordonnée et organisée. Nous utiliserons Mongoose, une bibliothèque de modélisation d'objets MongoDB populaire, pour interagir avec la base de données et effectuer des opérations CRUD.</p>
+                <p>Dans ce tutoriel, nous allons nous plonger dans l'implémentation d'un controller pour notre API. Le contrôleur agit comme un intermédiaire entre la base de données et l'API, ce qui nous permet d'interagir avec la base de données et de traiter les requêtes de l'API. Nous utiliserons Mongoose pour interagir avec la base de données et effectuer des opérations CRUD.</p>
             </div>
         </section>
         <section>
